# google-login

./: README.md
back/: pyproject.toml
front/app/(auth)/login/: layout.tsx  page.tsx
front/app/(auth)/register/identity/: layout.tsx  page.tsx
front/app/(auth)/register/recovery/: layout.tsx  page.tsx
front/app/(auth)/register/recovery/verify/: layout.tsx  page.tsx
front/app/(auth)/register/review/: layout.tsx  page.tsx
front/app/(auth)/register/security/: layout.tsx  page.tsx
front/app/(auth)/register/success/: layout.tsx  page.tsx
front/features/auth/components/login/: Divider.tsx  SignupPrompt.tsx
front/features/auth/components/login/form/: LoginButton.tsx  LoginForm.tsx  LoginFormHeader.tsx  SocialLoginButton.tsx
front/features/auth/components/login/header/: LoginPageHeader.tsx
front/features/auth/components/register/Identity/footer/: StatusBadge.tsx  TrustBadge.tsx  TrustBadges.tsx
front/shared/icons/: BadgeIcon.tsx  ChevronDownIcon.tsx  EmailIcon.tsx  GoogleIcon.tsx  HeroIcon.tsx  IdeaIcon.tsx  IdentityIcon.tsx  IdentityLogoIcon.tsx  IllustrationIcon.tsx  LockIcon.tsx  MoblieIcon.tsx  ProfileIcon.tsx  QuestionIcon.tsx  RecoveryLogoIcon.tsx  SaveIcon.tsx  SecurityIcon.tsx  ShieldIcon.tsx  StatusBadgeIcon.tsx  StatusIcon.tsx  UserMenuIcon.tsx
front/shared/ui/avatar/: UserAvatar.tsx
front/shared/ui/badge/: Badge.tsx  EncryptedBadge.tsx  SecurityBadge.tsx  StatusBadge.tsx
front/shared/ui/button/: CTAButton.tsx
front/shared/ui/input/: InputField.tsx  PasswordInput.tsx  PasswordVisibilityToggle.tsx
(+117 files in other folders)
