[project]
name = "back"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pan6603", email = "pan5158a@gmail.com"},
]
dependencies = ["fastapi>=0.135.3", "uvicorn>=0.44.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
